--- a/storage/connectors/bigquery/pom.xml
+++ b/storage/connectors/bigquery/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>dev.feast</groupId>
         <artifactId>feast-storage-connectors</artifactId>
-        <version>${revision}</version>
+        <version>0.5-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
