--- a/storage/connectors/pom.xml
+++ b/storage/connectors/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>dev.feast</groupId>
         <artifactId>feast-parent</artifactId>
-        <version>${revision}</version>
+        <version>0.5-SNAPSHOT</version>
         <relativePath>../..</relativePath>
     </parent>
 
