--- a/core/pom.xml
+++ b/core/pom.xml
@@ -149,6 +149,12 @@
             <version>v1b3-rev266-1.25.0</version>
         </dependency>
 
+        <dependency>
+          <groupId>org.apache.flink</groupId>
+          <artifactId>flink-clients_2.11</artifactId>
+          <version>1.10.1</version>
+        </dependency>
+
         <!--compile 'org.hibernate:hibernate-core:5.3.6.Final'-->
         <dependency>
             <groupId>org.hibernate</groupId>
@@ -200,6 +206,13 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+        
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>mockwebserver</artifactId>
+            <version>3.11.0</version>
             <scope>test</scope>
         </dependency>
 
