--- a/infra/docker-compose/core/direct-runner.yml
+++ b/infra/docker-compose/core/direct-runner.yml
@@ -1,3 +1,7 @@
 feast:
   jobs:
-    runner: DirectRunner
+    # Name of the active runner in "runners" that should be used. Only a single runner can be active at one time.
+    active_runner: direct
+  stream:
+    options:
+      bootstrapServers: kafka:9092
