--- a/infra/docker-compose/.env.sample
+++ b/infra/docker-compose/.env.sample
@@ -1,7 +1,7 @@
 # General
 COMPOSE_PROJECT_NAME=feast
 FEAST_VERSION=latest
-FEAST_REPOSITORY_VERSION=v0.4.7
+FEAST_REPOSITORY_VERSION=master
 
 # Feast Core
 FEAST_CORE_IMAGE=gcr.io/kf-feast/feast-core
