--- a/infra/docker-compose/.env.sample
+++ b/infra/docker-compose/.env.sample
@@ -5,7 +5,7 @@ FEAST_REPOSITORY_VERSION=master
 
 # Feast Core
 FEAST_CORE_IMAGE=gcr.io/kf-feast/feast-core
-FEAST_CORE_CONFIG=direct-runner.yml
+FEAST_CORE_CONFIG=flink
 FEAST_CORE_GCP_SERVICE_ACCOUNT_KEY=placeholder.json
 
 # Feast Serving Batch (BigQuery)
