--- a/ingestion/pom.xml
+++ b/ingestion/pom.xml
@@ -56,7 +56,7 @@
                   implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                 <transformer
                   implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                  <mainClass>feast.ingestion.ImportJobOld</mainClass>
+                  <mainClass>feast.ingestion.ImportJob</mainClass>
                 </transformer>
                 <transformer
                   implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
