--- a/ingestion/pom.xml
+++ b/ingestion/pom.xml
@@ -128,6 +128,12 @@
     </dependency>
 
     <dependency>
+      <groupId>dev.feast</groupId>
+      <artifactId>feast-storage-connector-cassandra</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+
+    <dependency>
       <groupId>com.google.auto.value</groupId>
       <artifactId>auto-value-annotations</artifactId>
       <version>1.6.6</version>
@@ -211,6 +217,12 @@
     <dependency>
       <groupId>io.lettuce</groupId>
       <artifactId>lettuce-core</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.beam</groupId>
+      <artifactId>beam-sdks-java-io-cassandra</artifactId>
+      <version>${org.apache.beam.version}</version>
     </dependency>
 
     <dependency>
