--- a/storage/connectors/cassandra/pom.xml
+++ b/storage/connectors/cassandra/pom.xml
@@ -57,9 +57,15 @@
         </dependency>
 
         <dependency>
+            <groupId>org.apache.beam</groupId>
+            <artifactId>beam-runners-direct-java</artifactId>
+            <version>${org.apache.beam.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12</version>
             <scope>test</scope>
         </dependency>
 
